--- a/backend/package.json
+++ b/backend/package.json
@@ -5,16 +5,28 @@
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/node": "^18.7.13",
+    "@types/node": "^18.11.0",
+    "prisma": "^4.5.0",
+    "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.4"
   },
   "dependencies": {
+    "@prisma/client": "^4.5.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1"
   },
   "scripts": {
     "build": "tsc",
     "dev": "ts-node-dev src/index.ts"
+  },
+  "compilerOptions": {
+    "sourceMap": true,
+    "outDir": "dist",
+    "strict": true,
+    "lib": [
+      "esnext"
+    ],
+    "esModuleInterop": true
   }
 }
