--- a/backend/package.json
+++ b/backend/package.json
@@ -6,13 +6,14 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.11.0",
-    "prisma": "^4.8.0",
+    "prettier": "^2.8.3",
+    "prisma": "^4.9.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "@prisma/client": "^4.8.0",
+    "@prisma/client": "^4.9.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.2"
   },
