--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.11.0",
-    "prettier": "^2.8.3",
+    "prettier": "2.8.3",
     "prisma": "^4.9.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
