--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/morgan": "^1.9.4",
     "@types/node": "^18.11.0",
     "prettier": "2.8.3",
     "prisma": "^4.9.0",
@@ -15,7 +16,8 @@
   "dependencies": {
     "@prisma/client": "^4.9.0",
     "dotenv": "^16.0.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   },
   "scripts": {
     "build": "tsc",
