--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
     "@prisma/client": "^4.9.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "zod": "^3.21.4"
   },
   "scripts": {
     "build": "tsc",
